# credit-risk-default-model

./: .env.example  .gitignore  README.md  model_card.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: model_metadata.json
backend/: data.py  explainability.py  main.py  modeling.py  policy.py  schemas.py
frontend/: index.html
tests/: conftest.py  test_backend.py
