[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-default-model"
version = "0.2.0"
description = "Synthetic credit-risk default scoring demo with FastAPI, diagnostics, and policy simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<1.6",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
